test/message/esm_loader_not_found.out
(node:*) ExperimentalWarning: --experimental-loader is an experimental feature. This feature could change at any time
internal/process/esm_loader.js:*
    internalBinding('errors').triggerUncaughtException(
                              ^
Error [ERR_MODULE_NOT_FOUND]: Cannot find package 'i-dont-exist' imported from *
    at packageResolve (internal/modules/esm/resolve.js:*:*)
    at moduleResolve (internal/modules/esm/resolve.js:*:*)
    at Loader.defaultResolve [as _resolve] (internal/modules/esm/resolve.js:*:*)
    at Loader.resolve (internal/modules/esm/loader.js:*:*)
    at Loader.getModuleJob (internal/modules/esm/loader.js:*:*)
    at Loader.import (internal/modules/esm/loader.js:*:*)
    at internal/process/esm_loader.js:*:*
    at initializeLoader (internal/process/esm_loader.js:*:*)
    at Object.loadESM (internal/process/esm_loader.js:*:*)
    at runMainESM (internal/modules/run_main.js:*:*) {
  code: 'ERR_MODULE_NOT_FOUND'
}
